--- a/_config.yml
+++ b/_config.yml
@@ -62,8 +62,8 @@ minima:
   skin: classic
 
   social_links:
-    twitter: JontyDawson
-    github: jonty-dawson
+    - { platform: twitter, user_url: "https://twitter.com/JontyDawson" }
+    - { platform: github, user_url: "https://github.com/jonty-dawson" }
 
 # jekyll-seo-tag
 author:
