--- a/_config.yml
+++ b/_config.yml
@@ -78,6 +78,8 @@ social:
     - https://github.com/jonty-dawson
     - http://www.linkedin.com/in/jontydawson
 
+logo: /favicon.svg
+
 # used for twitter card twitter:site
 twitter:
   username: JontyDawson
