--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,11 @@
 # see also: https://docs.github.com/en/pages/setting-up-a-github-pages-site-with-jekyll/creating-a-github-pages-site-with-jekyll
 
 title: Music Scores
+subtitle: Sheet music for classical guitar.
 description: >- # this means to ignore newlines until "baseurl:"
-  Sheet music for classical guitar, using Lilypond engraving.
+  PDF sheet music editions for classical guitar, using Lilypond for notation engraving with full fingering.
+   Free PDF download and edition notes.
+   Arrangement and transcription of Bach for guitarra.
 baseurl: "/music-scores" # the subpath of your site, e.g. /blog
 url: "https://jonty-dawson.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 copyright: Copyright © 2022-2024 Jonty Dawson
@@ -40,8 +43,11 @@ plugins:
   - jekyll-relative-links
   - jekyll-sitemap
 
-header_pages:
-  - about.md
+header_anchors:
+  - { id: "editions", title: "Editions" }
+  - { id: "about", title: "About" }
+# header_pages:
+#  - about.md
 
 collections:
   editions:
@@ -56,7 +62,12 @@ defaults:
     values:
       seo:
         type: Article
-      tagline: 🎼PDF📁
+      preview_caption: Sample
+      arranger: Jonty Dawson
+
+recent_edition_date: 2023-12-01
+recent_edition_tagline: "✨NEW✨ · "
+
 
 minima:
   skin: classic
