add links to youtube
add Erik Satie Gymnopedie no. 1

some updated full-page preview images

--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,7 @@ plugins:
 
 header_anchors:
   - { id: "editions", title: "Editions" }
+  - { id: "videos", title: "Videos" }
   - { id: "about", title: "About" }
 # header_pages:
 #  - about.md
